--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "release": "webpack --config=build/webpack.app.config.js --env=production && electron-builder"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -77,6 +78,7 @@
     "react-bootstrap-slider": "^1.1.7",
     "react-dom": "^15.4.2",
     "react-intl": "^2.4.0",
+    "react-mic-plus": "^1.3.1",
     "react-scripts": "0.8.5",
     "react-selectize": "^2.1.0",
     "react-tap-event-plugin": "^2.0.1",
