--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-bootstrap-grid": "^1.0.0",
     "react-bootstrap-slider": "^1.1.7",
     "react-dom": "^15.4.2",
+    "react-h5-audio-player": "^1.1.0",
     "react-intl": "^2.4.0",
     "react-mic-plus": "^1.3.1",
     "react-scripts": "0.8.5",
